# ros2_ai

./: README.md
ros2_autoencoder/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_autoencoder/ros2_autoencoder/: autoencoder_node.py
